# tars

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Prd.md  README.md  actors_db.json  configuration.yaml  directors_db.json  future_migrations.md  improvements.md  movies_db.json  prod-checklist.md  todo.md  tracker.md
.sqlx/: query-0dda3ce83ab1f33877e122c8ee2f88fdaff273302ac2d23bbf3b548d356e2121.json  query-0e15b6bf8c969828813efe2185800d9a38d520f4ff4245c88dbc3fdce438e927.json  query-1f157d47050e71d64b240bf358413f8aabcd2273ecdf1e5d66d5f28dc2aa0b99.json  query-35622d443f8499e478dbe4f92ff5c164dae13bb2929701c9450f93bb8a729e0c.json  query-3eccba6a879e015c7e54c2ffbeda055386c2a5e321700a3230c776b9af7c31ba.json  query-7dad04af07bf11f0706eb4d461c19f5a59dddb26f494a551006e18f833ca4696.json  query-c42a5de38222af6b2395d6a7bb81e5f24a3d5258546810f4044653a0162f801a.json  query-cfc0009f76ade394479659dca4f98f1617a454d55a8ed80212e76f157f639d2f.json
configuration/: base.yaml
migrations/: 20260420124048_create_tables.sql  20260424083449_admin_and_altering.sql  20260428141101_profile_and_orignals_alter.sql  20260428154016_not_null_on_profile_type.sql  20260428194054_orignals_metadata_columns.sql  20260501201820_type_reanaming.sql  20260512090110_sets_festivals_orignal_update.sql  20260514112110_sets_ledger_festivals_panelists.sql  20260519124901_original_credts_ledger_originals_sets_works_profiles_roles_admins.sql  20260702194310_recommedations_original_credits_sets_artists_originals_ledger_followings.sql  20260703190516_permissions_roles.sql  20260709113508_lines_pins_quotes_surge_params.sql  20260710205426_wall_saves_work_saves_normalized_surge_score.sql  20260711145953_surge_score_dtype.sql  20260721103451_reactions_discussions_spirit_recommendation_boost.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/db/: admins.rs  artists.rs  festivals.rs  ledger.rs  mod.rs  originals.rs  sets.rs  works.rs
src/domain/: genre.rs  handle.rs  ledger_thought.rs  library_notes.rs  library_thought.rs  mod.rs  original_description.rs  original_title.rs  password.rs  role.rs  script_thought.rs  stage_name.rs  tagline.rs  work_title.rs
src/errors/: mod.rs
src/models/: mod.rs
src/routes/: admin.rs  artists.rs  auth.rs  festivals.rs  health_check.rs  ledger.rs  library.rs  mod.rs  originals.rs  profiles.rs  sets.rs  stages.rs  works.rs
tests/: admin.rs  artists.rs  auth.rs  festivals.rs  health_check.rs  ledger.rs  library.rs  originals.rs  recommendations.rs  sets.rs  stages.rs  upload_works.rs  wall_posts.rs  works.rs
(+131 files in other folders)
