[package]
name = "tars"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tars"

[dependencies]
argon2 = {version = "0.5.3",features = ["std"]}
axum = "0.8.8"
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = "0.15.22"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tim = "0.0.1"
time = "0.3.47"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "json",
  "migrate"
]

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json","cookies"] }
